@@ -8,4 +8,4 @@ if has("balloon_eval")
 endif
 
 " The 'Pyclewn' command starts pyclewn and vim netbeans interface.
-command -nargs=* -complete=file Pyclewn call pyclewn#StartClewn(<f-args>)
+command -nargs=* -complete=file Pyclewn call pyclewn#start#StartClewn(<f-args>)
